@@ -7,6 +7,8 @@ Version 0.40
     * fix the error message given when an invalid algorithm is
       specified in the construction of Mail::DKIM::Signer.
     * avoid a Perl warning about use of an undefined value
+    * speed- improved performance of parsing the message into lines
+      (rt.cpan.org issue #77902). Patch by Mark Martinec.
 
 
 Version 0.39 - released 2010-11-14
